# kratos-mcp

./: .gitignore  CLAUDE.md  README.md  athena.yaml  pyproject.toml
docs/: README.md
kratos_mcp/: __init__.py  client.py  server.py
