[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kratos-mcp"
version = "0.1.0"
description = "MCP server for the Kratos deployment platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
kratos-mcp = "kratos_mcp.server:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
